--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="title_notifications">Notifications</string>
 
     <string name="v_list_load_more">Load more</string>
+    <string name="v_list_load_more_loading">Loading…</string>
 </resources>
