--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
 
     <string name="v_list_load_more">Load more</string>
     <string name="v_list_load_more_loading">Loading…</string>
+    <string name="content_details_similar">You might like</string>
 </resources>
